<resources>
    <string name="app_name">joaquim_gomes_WIT_challenge</string>

    <!--    Generic-->
    <string name="no_network_error">Ouch, you had run out of internet access 📡</string>
    <string name="fragment_request_location_dialog_title">We need to know your location</string>
    <string name="fragment_request_location_dialog_textView">No worries, we will use your location just to get meteorologic data 😉.</string>
    <string name="fragment_request_location_dialog_button">Ok!</string>
    <string name="access_fine_location_permissions_denied">We need your permission to get meteorologic data</string>
    <string name="compose_ui_list_weather_info">No Weather data 😖</string>

    <!--    Drawable descriptions -->
    <string name="drawable_name_city_description">City name</string>
    <string name="drawable_temp_city_description">City actual temperature</string>
    <string name="drawable_min_temp_city_description">City min temperature</string>
    <string name="drawable_max_temp_city_description">City max temperature</string>
    <string name="drawable_air_pressure_city_description">City air pressure</string>
    <string name="drawable_visibility_city_description">City visibility</string>
    <string name="drawable_wind_velocity_description">City wind velocity</string>
    <string name="drawable_date_city_description">Actual date</string>
    <string name="drawable_weather_description_city_description">Actual weather description</string>
    <string name="drawable_weather_description_city_humidity">City actual humidity</string>

    <!--Generic Placeholders-->
    <string name="general_text_place_holder_title">Name City Placeholder</string>
    <string name="general_text_place_holder_text"><![CDATA[#Placeholder_Text]]></string>
    <string name="general_text_place_holder_description_weather_temp">#weather_temp º</string>
    <string name="general_text_place_holder_description_weather_text">#weather_description</string>

    <!--    Home fragment strings-->
    <string name="home_fragment_get_user_permissions_text_first">First, we need to get some permissions 😉.</string>
    <string name="home_fragment_get_user_permissions_text_second">Tap the button below to proceed</string>
    <string name="home_fragment_get_user_permissions_button">Get permissions</string>
    <string name="home_fragment_go_to_compose_ui_button">See Ui in Android Compose</string>

    <!--    Detail Fragment Strings-->
    <string name="details_fragment_actual_temp">Actual temperature #actualTemp º</string>
    <string name="details_fragment_min_temp">Min today temperature #minTemp º</string>
    <string name="details_fragment_max_temp">Max today temperature #maxTemp º</string>
    <string name="details_fragment_humidity">Air humidity #humidity</string>
    <string name="details_fragment_pressure">Air pressure #pressure hPa</string>
    <string name="details_fragment_visibility">Visibility in #visibility meters</string>
    <string name="details_fragment_wind_speed">Wind speed #windSpeed #metric</string>
    <string name="details_fragment_wind_speed_metric_metric">meters/sec</string>
    <string name="details_fragment_wind_speed_metric_imperial">miles/hour</string>

    <!--    Weather api responses strings-->
    <string name="error_empty_response_weather_data">No data in api weather response</string>
    <string name="error_response_not_successful_weather_data">Weather api response was not successful</string>
    <string name="error_get_api_data">We cannot access weather data now, please try again later</string>
    <string name="error_set_map_marker">We cannot set map marker for now, please try again later</string>

</resources>